Clean up merge conflicts